deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: my-react-app
  template:
    metadata:
      labels: 
        app: my-react-app
    spec:
      containers: 
        - name: my-react-app
          image: vijayapranav/end_to_end_react_app:v1.0.0
          ports:
          - containerPort: 3000
