ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-react-app-ingress
spec:
  ingressClassName: traefik
  rules:
   - host: react.local
     http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
           name: my-react-app-service
           port:
            number: 3000
